k8s/04-iam-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-service
  namespace: loan-app
  labels:
    app: iam-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iam-service
  template:
    metadata:
      labels:
        app: iam-service
    spec:
      containers:
      - name: iam-service
        image: aarghyan/iam-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: jwt-keys-vol
          mountPath: /app/private.pem
          subPath: private.pem
          readOnly: true
      volumes:
      - name: jwt-keys-vol
        secret:
          secretName: jwt-keys
---
apiVersion: v1
kind: Service
metadata:
  name: iam-service
  namespace: loan-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: iam-service
