k8s/05-loan-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-service
  namespace: loan-app
  labels:
    app: loan-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loan-service
  template:
    metadata:
      labels:
        app: loan-service
    spec:
      containers:
      - name: loan-service
        image: aarghyan/loan-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - name: jwt-keys-vol
          mountPath: /app/public.pem
          subPath: public.pem
          readOnly: true
      volumes:
      - name: jwt-keys-vol
        secret:
          secretName: jwt-keys
---
apiVersion: v1
kind: Service
metadata:
  name: loan-service
  namespace: loan-app
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: loan-service
